# goalrail

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.ru.md  RELEASING.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  config.yaml  openapi.json  package-lock.json  package.json  pyproject.toml  render.yaml  setup.py
.github/: CODEOWNERS  MAINTAINER  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md  pr-intake-gate.yml  reviewers
.goalrail/: .gitignore
.punk/: README.md  project.toml  publishing.toml
ap-web/: .prettierignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vite.embed.config.ts
apps/: README.md
deploy/: README.md
designs/: CLI_CONTRACT.md  SANDBOX_CREDENTIAL_PROXY.md  SESSION_PROJECTS_SIDEBAR.md  ci-external-contributors-proposal.md  issue-triage-proposal.md  opencode-native-gaps-qa.md  opencode-native-gaps.md
docs/: AGENT_YAML_SPEC.md  GOALRAIL_BOT_SETUP.md  INDEX.md  POLICIES.md  PROJECT_SPINE_SCHEMA.md  QWEN_FOLLOWUPS.md  QWEN_NATIVE_DESIGN.md  antigravity-native-rpc-core-design.md  antigravity-native-rpc-core-plan.md  cursor-native-cost-tracking.md  cursor-native-elicitation.md  cursor-native-tui-mirror-plan.md  databricks.md  goalrail-upgrade-design.md  omni-upgrade-design.md
evals/: README.md
sdks/ui/: README.md  pyproject.toml
sdks/ui/goalrail_ui_sdk/: __init__.py
sdks/ui/goalrail_ui_sdk/terminal/: _config.py  _formatter.py  _host.py  _tool_renderers.py
sdks/ui/omnigent_ui_sdk/terminal/: _formatter.py  _host.py
(+2765 files in other folders)
